# computational-math

./: CMakeLists.txt
Lab-1/: gauss.cpp  gauss.h  input.txt  main.cpp  vector_io.cpp  vector_io.h
Lab-2/: drawer.py  equations.cpp  gauss.cpp  main.cpp  vector_io.cpp
Lab-2/headers/: equations.h  gauss.h  vector_io.h
Lab-2/methods/: binary_division.cpp  newton_system.cpp  secant.cpp  simple_iteration.cpp
Lab-2/methods/headers/: binary_division.h  newton_system.h  secant.h  simple_iteration.h
Lab-2/resource/: equations  input.txt  systems
